# firestore2csv

./: README.md  firestore2csv.py  pyproject.toml
