[tool.poetry]
name = "firestore2csv"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <habita.gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
firebase_admin = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
